Addition: Added line height classes.

--- a/src/styles/fluid/fluid-typescales-classes.css
+++ b/src/styles/fluid/fluid-typescales-classes.css
@@ -1,6 +1,6 @@
 /**
  * @file /src/styles/fluid/fluid-typescales-variables.css
- * @description Variables for fluid typescale.
+ * @description Classes for fluid typescale.
  */
 
 @layer utilities {
