Refactor: Added correct layer for font declaration.

--- a/src/styles/fonts/jetbrain-mono.css
+++ b/src/styles/fonts/jetbrain-mono.css
@@ -4,6 +4,8 @@
  * @description JetBrains Mono font declaration.
  */
 
+@layer base {
+
 /**
  * Font: JetBrains Mono
  * Feature: Developer Sans Monospace font, high legiblity.
@@ -43,4 +45,6 @@
   src: url("/fonts/jetbrains-mono/jetbrains-mono-italic-vf.woff2") format("woff2-variations"),    /* Modern preferred, least size. */
        url("/fonts/jetbrains-mono/jetbrains-mono-italic-vf.woff")  format("woff-variations"),     /* Stable and widely supported.  */
        url("/fonts/jetbrains-mono/jetbrains-mono-italic-vf.ttf")   format("truetype-variations"); /* Least preferred, high size.   */
+}
+
 }
